[package]
name = 'pallet-dotmog'
version = '4.0.0-dev'
description = 'Ajuna Network DOTMog pallet including Layer one part.'
authors = ['Ajuna Network <https://github.com/ajuna-network>']
edition = '2018'
homepage = 'https://dotmog.com'
license = 'Apache-2.0'
repository = 'https://github.com/ajuna-network/pallets-ajuna/tree/master/pallet-ajuna-dotmog'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# third-party dependencies
codec = {default-features = false, features = ['derive','max-encoded-len'], package = 'parity-scale-codec', version = '2.3.1'}
scale-info = {default-features = false, features = ['derive'], version = '1.0'}

# primitives
sp-runtime = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-std = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-core = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-support = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-system = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

[dev-dependencies]
serde = '1.0.126'
sp-io = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-support-test = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-balances = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-scheduler = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'sp-runtime/std',
	"sp-std/std",
    'sp-core/std',
    'frame-support/std',
    'frame-system/std',
]
try-runtime = ["frame-support/try-runtime"]
